# jimp_exercises

lab1/doublebasepalindromes/: CMakeLists.txt  Doublebasepalindromes.cpp  Doublebasepalindromes.h  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab10/: CMakeLists.txt
lab10/algo/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab10/scheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab11/: CMakeLists.txt
lab11/mean/: Mean.h  main.cpp
lab11/value/: CMakeLists.txt  Value.cpp  Value.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  main.cpp
lab12/vector/: CMakeLists.txt  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  CMakeLists.txt  main.cpp
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/smarttree/: CMakeLists.txt  SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: CMakeLists.txt  TinyUrl.cpp  TinyUrl.h  main.cpp
lab5/: CMakeLists.txt
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt
lab7/arrayfilling/: ArrayFilling.cpp  ArrayFilling.h  CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt
lab9/academiaserializer/: CMakeLists.txt  Serialization.cpp  Serialization.h  main.cpp
(+65 files in other folders)
